kubernetes/applications/media/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media
spec:
  selector:
    app: overseerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
