kubernetes/applications/media/overseerr/cloudflare-tunnel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-cloudflare
  namespace: media
  labels:
    app: overseerr
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: overseerr.kernow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 5055
